[Intel MKL] Prototype of vectorizing bfloat16 operations in Eigen

--- a/tensorflow/core/kernels/BUILD
+++ b/tensorflow/core/kernels/BUILD
@@ -4119,6 +4119,26 @@ tf_cuda_cc_test(
 )
 
 tf_cuda_cc_test(
+    name = "bf16_ops_test",
+    size = "small",
+    srcs = ["bf16_ops_test.cc"],
+    deps = [
+        ":bounds_check",
+        ":cwise_op",
+        ":nn",
+        ":ops_testutil",
+        ":ops_util",
+        "//tensorflow/core:core_cpu",
+        "//tensorflow/core:framework",
+        "//tensorflow/core:lib",
+        "//tensorflow/core:protos_all_cc",
+        "//tensorflow/core:test",
+        "//tensorflow/core:test_main",
+        "//tensorflow/core:testlib",
+    ],
+)
+
+tf_cuda_cc_test(
     name = "unary_ops_composition_test",
     size = "small",
     srcs = ["unary_ops_composition_test.cc"],
